<resources>
    <string name="app_name">Perfect Fit</string>
    <string name="login">Login</string>
    <string name="register">Make an account</string>
    <string name="alreadyMember">Already a member? Sign in here!</string>
    <string name="newMember">New to the app? Make an account here!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enterEmail">Please enter an email</string>
    <string name="enterPassword">Please enter a password</string>
    <string name="enterName">Please enter a username</string>
    <string name="enterWeight">Please enter weight in kg</string>
    <string name="enterHeight">Please enter height in meters</string>
    <string name="enterBodyFatLevel">Please enter body fat level</string>
    <string name="enterAge">Please enter your age</string>
    <string name="registerAccount">Register</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="next">Next</string>
    <string name="exercise">Exercise</string>
    <string name="support">Support</string>
    <string name="remainingCalText">You have</string>
    <string name="testRemainingCalValue">1810</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="scanner">Open scanner</string>
    <string name="title_activity_register_measurements">RegisterMeasurements</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="genderText">Please select your gender</string>
    <string name="supportQuestion">Would you like the additional support features within the app?</string>
    <string name="lossQuestion">How much weight per week do you want to lose?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="halfPound">0.5lb</string>
    <string name="pound">1lb</string>
    <string name="oneHalfPound">1.5lbs</string>
    <string name="twoPounds">2lbs</string>
    <string name="accountDetails">Account Details</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="BMI">BMI</string>
    <string name="age">Age</string>
    <string name="updateMeasuerments">Update My Measurements</string>
    <string name="update">Update</string>
    <string name="caloriesRemaining">You have 0 calories remaining for today</string>
    <string name="enterTime">How many minutes have exercised for?</string>
    <string name="enterCalPerMin">How many calories does this burn per minute?</string>
    <string name="enterExerciseName">What is the name of this exercise?</string>
    <string name="addExerciseDatabase">Add exercise to database</string>
    <string name="addExerciseSearch">Search to add your exercise</string>
    <string name="addExercise">Add exercise</string>
    <string name="addFoodDatabase">Add food to database</string>
    <string name="addFoodSearch">Search to add your food</string>
    <string name="addFoodScanner">Scan to add your food</string>
    <string name="enterCalPer100g">How many calories are in it per 100g?</string>
    <string name="enterFoodName">What is the name of this food?</string>
    <string name="addFood">Add Food</string>
    <string name="search">Search</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="stopwatchDesc">A handy stopwatch to help you in your workouts</string>
    <string name="foodSuggestions">Food suggestions</string>
    <string name="foodSuggestionsDesc">Need help deciding what to eat? Let us help you</string>
    <string name="workoutPlanner">Workout Plan</string>
    <string name="workoutPlannerDesc">Plan your workouts with us so you can get straight to it later on</string>
    <string name="foodPlanner">Meal Plan</string>
    <string name="foodPlannerDesc">Plan your meals with us to keep you on track to reach your goals</string>
    <string name="quoteTip">Motivation and tips</string>
    <string name="quoteTipDesc">See what members of our community are talking about</string>
    <string name="tipShare">Share your tips</string>
    <string name="tipShareDesc">Share your tips and advice with other users to help each other out</string>
    <string name="stopwatchTitle">Let us time you, you focus on your workout!</string>
    <string name="backHome">Back to Home</string>
    <string name="addTipsHint">What would you like to share?</string>
    <string name="share">Share</string>
    <string name="addNewMeal">Create a new meal</string>
    <string name="addMealTitle">Enter the name of the meal</string>
    <string name="enterMealDesc">A brief description of ingredients</string>
    <string name="priority">Set a priority for the meal to plan how soon you want to have it:</string>
    <string name="create">Create</string>
    <string name="yourMeals">Your meals</string>
    <string name="welcomeDesc">We hope you\'re having a great day!</string>
    <string name="caloriesRemainingDesc">Track the foods you\'re eating, remember to exercise for more calories for the day! </string>
    <string name="weightLossPrediction">You\'re on track to lose 0 pounds this week </string>
    <string name="predictedWeightLossDesc">Based on the information you\'ve given us, this is how we think you\'ll do this week! </string>
    <string name="yourWorkout">Your workout </string>
    <string name="addNewExercise">Enter the name of the exercise </string>
    <string name="addNewExerciseTarget">Give your target for this exercise </string>
    <string name="addNewExerciseHeading">Add your exercise</string>
    <string name="priorityExerciseText">Give this exercise a number for ordering, to structure your workout:</string>
    <string name="tipsTitle">What are our community saying?</string>
    <string name="addDuration">How long did you exercise for?</string>
    <string name="exerciseAdded">Exercise added!</string>
    <string name="addMoreExercises">Got any more exercises to add?</string>
    <string name="moreExercisesButtonText">Add more exercises</string>
    <string name="backToMenuText">If you\'re all finished, head back to the main menu</string>
    <string name="backToMenuTextButton">Back to menu</string>
    <string name="yourExercisesToday">Your exercises today so far</string>
    <string name="enterBarcode">Enter the barcode on the product</string>
    <string name="enterPortionSize">Enter the average portion size in grams</string>
    <string name="addNewFoodHeading">Add your food</string>
    <string name="addAmount">How many portions did you have?</string>
    <string name="addMoreFoodsButtonText">Add more foods</string>
    <string name="addFoodsText">Got anymore foods to add?</string>
    <string name="foodAdded">Food added!</string>
    <string name="yourFoodsToday">Foods you\'ve had today</string>
    <string name="suggestionsTitle">Can\'t decide what to eat?</string>
    <string name="suggestionsSubTitle">Why not try some of these?</string>
    <string name="foodDiary">Here\'s your food diary for the day!</string>
    <string name="exerciseDiary">Here\'s your completed exercise today!</string>
    <string name="workoutText">Plan your workout so you can get straight to it later on!</string>
    <string name="mealsText">Plan your meals to keep you on track!</string>
    <string name="tipsDesc">Get helpful advice from our other members</string>
    <string name="leaderboard">On-Target Leaderboard</string>
    <string name="yourScore">You score is: 0, where do you place on the leaderboard?</string>
    <string name="shareYourTips">Share your tips</string>
    <string name="addTipsTitle">Please give your post a title</string>
    <string name="lastStep">The last of the questions, we promise!</string>
    <string name="registerStart">First, a few basic details...</string>
    <string name="registerQuestions">How would you like to use Perfect Fit?</string>
    <string name="registerDetails">Tell us more about you...</string>
    <string name="logInText">Glad to have you back, please log in!</string>
    <string name="shareTipsDesc">Share your tips and advice with the rest of the Perfect Fit community!</string>
    <string name="tipShareWarning">Please note that what you post here is visible to the rest of the community, please be considerate with what you post!</string>
    <string name="newMeal">New Meal</string>
    <string name="newMealDesc">Create a new meal to add to your plan</string>
    <string name="newExercise">New Exercise</string>
    <string name="newExerciseDesc">Create a new exercise to add to your plan</string>
    <string name="accountDetailsDesc">Here\'s the details of your account with us</string>
    <string name="measurementsDesc">Keep your measurements up to date to let us know how you\'re doing</string>
    <string name="addFoodDesc">Tell us how much of this food you\'ve had to track it</string>
    <string name="foodAddedDesc">This food has now been added to your tracking and food diary!</string>
    <string name="foodToAdd">Add a new food</string>
    <string name="foodToAddDesc">Add a new food for our database to track it with us</string>
    <string name="addExerciseDesc">Tell us how much of this exercise you\'ve done to track it</string>
    <string name="exerciseAddedDesc">This exercise has now been added to your tracking and exercise diary!</string>
    <string name="newExerciseDatabase">Add a new exercise</string>
    <string name="newExerciseDatabaseDesc">Create a new exercise to add into our database</string>
</resources>
