<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterQuestions">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/registerQuestions"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="186dp"
        android:layout_height="185dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/fitnesslogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="300sp"
        android:layout_height="75sp"
        android:layout_marginTop="8dp"
        android:background="@color/primaryColor"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondaryTextColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loseGroup" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportText"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/supportQuestion"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <RadioGroup
        android:id="@+id/supportGroup"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportText">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/yesButton"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:checked="false"
            android:onClick="rbClickSupport"
            android:text="@string/yes"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="266dp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/noButton"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:checked="false"
            android:onClick="rbClickSupport"
            android:text="@string/no" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loseText"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lossQuestion"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportGroup" />

    <RadioGroup
        android:id="@+id/loseGroup"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loseText">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/halfPoundButton"
            android:layout_width="75sp"
            android:layout_height="match_parent"
            android:checked="false"
            android:onClick="rbClickLoss"
            android:text="@string/halfPound"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="266dp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/poundButton"
            android:layout_width="75sp"
            android:layout_height="match_parent"
            android:checked="false"
            android:onClick="rbClickLoss"
            android:text="@string/pound" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/oneHalfPoundButton"
            android:layout_width="75sp"
            android:layout_height="match_parent"
            android:checked="false"
            android:onClick="rbClickLoss"
            android:text="@string/oneHalfPound" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/twoButton"
            android:layout_width="75sp"
            android:layout_height="match_parent"
            android:checked="false"
            android:onClick="rbClickLoss"
            android:text="@string/twoPounds" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>