<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountDetails">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/accountDetails"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="178dp"
        android:layout_height="137dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/fitnesslogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameText"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailText"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dateJoinedText"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/genderText"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateJoinedText" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ageText"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/age"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/BMIText"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/BMI"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateButton"
        android:layout_width="300sp"
        android:layout_height="75sp"
        android:layout_marginTop="20dp"
        android:background="@color/primaryColor"
        android:text="@string/updateMeasuerments"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondaryTextColor"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMIText" />


</androidx.constraintlayout.widget.ConstraintLayout>