<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterDetails">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:src="@drawable/fitnesslogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterAge"
            android:maxLength="50"
            android:outlineAmbientShadowColor="@color/primaryColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primaryTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="300sp"
        android:layout_height="75sp"
        android:background="@color/primaryColor"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondaryTextColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/genderText"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/genderText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageLayout" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderText"
        >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/maleButton"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:checked="false"
            android:onClick="rbClick"
            android:text="@string/male"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="266dp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/femaleButton"
            android:layout_width="150sp"
            android:text="@string/female"
            android:onClick="rbClick"
            android:checked = "false"
            android:layout_height="match_parent" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>